Add initial website file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="Abdi-modified.png" alt="Abdulahi profile picture"></td>
+        <td><img src="Abdi-modified-modified2.png" alt="Abdulahi profile picture"></td>
         <td><h1>Abdulahi Ali</h1>
         <p><em>Programmer and Student at <strong><a href="https://www.unitec.ac.nz/">Unitec</a></strong>.</em></p>
         <p>I am currently English learner at Unitec. I am also learning computer languages</p></td>
